@@ -1,3 +1,9 @@
+2011-03-29 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/CFRuntime.m:
+	* Source/CFNumber.m:
+	* Headers/CoreFoundation/CFNumber.h: Added CFBoolean.
+
 2011-03-27 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/CFLocale.c: (CFLocaleGetValue) Some more code.
